fix: the uboot configuration finally works

--- a/layers/meta-rpi5-rauc/conf/layer.conf
+++ b/layers/meta-rpi5-rauc/conf/layer.conf
@@ -19,3 +19,13 @@ WKS_FILE_DEPENDS:append = " dosfstools-native mtools-native e2fsprogs-native"
 
 # Enable U-Boot with extlinux distro boot
 RPI_USE_U_BOOT = "1"
+
+RPI_EXTRA_IMAGE_BOOT_FILES = "${KERNEL_IMAGETYPE} u-boot.bin;${SDIMG_KERNELIMAGE}"
+
+IMAGE_BOOT_FILES:append = " extlinux/extlinux.conf;extlinux/extlinux.conf"
+IMAGE_BOOT_FILES:remove = "boot.scr"
+
+do_image[depends] += "rpi5-rauc-bootfiles:do_deploy"
+
+# Completely exclude upstream rpi-u-boot-scr from being parsed/built
+BBMASK += "meta-raspberrypi/recipes-bsp/rpi-u-boot-scr/"
